[project]
name = "python-security-tools"
version = "0.1.0"
description = "Small Python scripts for blue-team learning, log review, IOC extraction, hashing, and authorized defensive enumeration."
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
http = ["requests>=2.31"]
dns = ["dnspython>=2.4"]
dev = ["pytest>=8.0", "ruff>=0.5"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
# F: pyflakes, E/W: pycodestyle, I: isort, UP: pyupgrade, B: bugbear
select = ["F", "E", "W", "I", "UP", "B"]
ignore = ["E501"]  # long lines are tolerated in help text / report templates

[tool.pytest.ini_options]
testpaths = ["tests"]
